[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Jayke"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde_json       = "1.0"
serde            = { version = "1.0", features = ["derive"] }
log              = "0.4"
tauri            = { version = "2.0.0", features = [] }
tauri-plugin-log = "2"
tokio            = { version = "1", features = ["full"] }
futures          = "0.3"
socket2          = { version = "0.5", features = ["all"] }

# TLS pur Rust — fonctionne en cross-compilation Android/iOS sans OpenSSL
tokio-rustls     = "0.26"
rustls           = { version = "0.23", features = ["ring"] }
rustls-native-certs = "0.8"
webpki-roots     = "0.26"
